syntax = "proto3";

option go_package = "demo001/echo/proto";

package echo;

service Echo {
    rpc UnaryEcho(EchoRequest) returns (EchoResponse);
    rpc ServerStreamingEcho(EchoRequest) returns (stream EchoResponse);
    rpc ClientStreamingEcho(stream EchoRequest) returns (EchoResponse);
    rpc BidirectionalStreamEcho(stream EchoRequest) returns (stream EchoResponse);
}

message EchoRequest {
    string message = 1;
}

message EchoResponse {
    string message = 1;
}